--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dirs = "5.0"
 
 # Async runtime
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "time", "fs"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "time", "fs", "signal"] }
 
 # GitHub API client
 octocrab = "0.48"
@@ -57,6 +57,9 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # Process daemonization
 daemonize = "0.5"
+
+# Unix process and signal handling
+nix = { version = "0.28", default-features = false, features = ["signal", "process"] }
 
 # Parallel processing
 futures = "0.3"
