Complete OSS project setup with comprehensive release pipeline
This commit establishes RepoSentry as a production-ready OSS project:

✅ OSS Project Infrastructure:
- MIT License with correct copyright (MindKraft Studios Group)
- Comprehensive CONTRIBUTING.md with development guidelines
- Multi-platform release workflow (Linux, macOS, Windows)
- Package distribution: deb, rpm, AppImage, DMG, installer

✅ Release Pipeline Features:
- Cross-platform binary builds (x86_64, ARM64)
- eget compatibility for easy installation
- GitHub releases with auto-generated changelogs
- Package managers support across all platforms

✅ CI/CD Improvements:
- Updated GitHub Actions with proper testing matrix
- Fixed all clippy warnings for strict CI compliance
- Code formatting enforcement with cargo fmt
- Comprehensive test coverage with security audits

✅ Documentation Updates:
- Complete README overhaul with Phase 2 status
- Comprehensive configuration guide (docs/CONFIGURATION.md)
- Installation instructions for all platforms
- Feature highlights and technology stack details

Ready for v1.0 release with professional OSS distribution.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "reposentry"
 version = "0.1.0"
 edition = "2021"
-authors = ["MK <mksg@mk.sg>"]
+authors = ["MindKraft Studios Group <mksg@mk.sg>"]
 description = "Intelligent git repository synchronization daemon"
 license = "MIT"
 repository = "https://github.com/MKSG-MugunthKumar/RepoSentry"
@@ -99,8 +99,8 @@ unused_must_use = "warn"
 
 # Debian package configuration
 [package.metadata.deb]
-maintainer = "MK <mksg@mk.sg>"
-copyright = "2024, MK <mksg@mk.sg>"
+maintainer = "MindKraft Studios Group <mksg@mk.sg>"
+copyright = "2025, MindKraft Studios Group <mksg@mk.sg>"
 license-file = ["LICENSE", "4"]
 depends = "$auto, git"
 section = "utils"
