Implement complete basic TUI interface for RepoSentry
Added comprehensive terminal user interface with:
- Interactive tab-based layout (Repositories, Status, Config, Logs)
- Event-driven architecture with keyboard navigation
- Repository listing with status indicators and branch info
- Sync progress tracking and daemon status monitoring
- Help dialogs, error popups, and progress indicators
- Integrated into main CLI as 'reposentry tui' command

Technical improvements:
- Added Clone traits to SyncEngine, SyncSummary, and GitHubClient
- Created modular widget system with reusable components
- Event handling system with async support and tick management
- Fixed all compilation errors and borrow checker issues

The TUI provides a modern, interactive interface for managing repository
synchronization while maintaining all existing CLI functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,10 @@ futures-util = "0.3"
 # Pattern matching for repository exclusions
 regex = "1.10"
 
+# Terminal User Interface
+ratatui = "0.25"
+crossterm = "0.27"
+
 [dev-dependencies]
 # Existing test dependency
 tempfile = "3.8"
