Implement provider-agnostic discovery architecture and health checks
Major refactoring to separate repository discovery from synchronization:

Discovery abstraction:
- Add Discovery trait for provider-agnostic repo discovery
- Add RepoSpec struct as universal repository descriptor
- Implement GitHubDiscovery using existing GitHubClient
- Add CloneMethod enum (SSH/HTTPS preference)

SyncEngine refactoring:
- Make SyncEngine provider-agnostic (accepts Vec<RepoSpec>)
- Add sync_repos() and analyze_repos() methods
- Add RepoSpec-based git operations (sync_from_spec, clone_from_spec)

Health check system:
- Add HealthCheck module for preflight system checks
- Check git installation, GitHub auth, base directory, SSH keys
- Separate data (CheckResult) from presentation
- TUI now runs health checks before launching
- Add comprehensive test suite (20 tests)

Architecture cleanup:
- Remove LegacySyncEngine (no backward compatibility needed)
- Update daemon to use discovery + sync pattern
- Update CLI sync command to use new architecture
- All components now use consistent discovery → sync flow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,9 @@ futures-util = "0.3"
 # Pattern matching for repository exclusions
 regex = "1.10"
 
+# Async trait support for dyn-compatible async traits
+async-trait = "0.1"
+
 # Terminal User Interface
 ratatui = "0.25"
 crossterm = "0.27"
