--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,9 @@ reqwest = { version = "0.11", features = ["json"] }
 path-clean = "1.0"
 shellexpand = "3.1"
 
+# File timestamp modification
+filetime = "0.2"
+
 # Date/time handling for repository age filtering
 chrono = { version = "0.4", features = ["serde"] }
 
