--- a/config.example.yml
+++ b/config.example.yml
@@ -69,9 +69,9 @@ daemon:
   # Sync interval when running as daemon
   interval: "30m"  # "5m", "15m", "30m", "1h", "2h", "daily"
 
-  # Daemon process settings
-  pid_file: "/tmp/reposentry.pid"  # Will use XDG_RUNTIME_DIR if available
-  log_file: "${HOME}/.local/share/reposentry/daemon.log"  # Will use XDG_DATA_HOME if available
+  # Daemon process settings (filename only, placed in XDG-compliant directories)
+  pid_file: "reposentry.pid"  # Placed in XDG_RUNTIME_DIR or /tmp
+  log_file: "daemon.log"      # Placed in XDG_DATA_HOME/reposentry or ~/.local/share/reposentry
 
 # Logging configuration
 logging:
