feat: add SQLite state database for event tracking and repository status
Add persistent storage for tracking sync events and repository state using SQLite:

- Add rusqlite and serde_json dependencies
- Create src/state.rs module with:
  - StateDb for database operations (XDG_DATA_HOME/reposentry/state.db)
  - Repository state tracking (status, branch, last sync time)
  - Event logging (cloned, pulled, branch_switch, skipped, errors)
  - Severity levels (info, warning, error) with acknowledgment support
  - Queries for unacknowledged events and repos with issues
- Fix clippy warnings across codebase (collapsible_if, map_clone, etc.)
- Use derive macro for Default on CloneMethod enum

This foundation enables future TUI notifications and CLI status commands.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ clap = { version = "4.4", features = ["derive"] }
 # Configuration and serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+serde_json = "1.0"
 
 # Error handling
 anyhow = "1.0"
@@ -54,6 +55,9 @@ shellexpand = "3.1"
 
 # File timestamp modification
 filetime = "0.2"
+
+# SQLite for state/event tracking
+rusqlite = { version = "0.31", features = ["bundled"] }
 
 # Date/time handling for repository age filtering
 chrono = { version = "0.4", features = ["serde"] }
